k8s/data-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-service
  template:
    metadata:
      labels:
        app: data-service
    spec:
      containers:
        - name: data-service
          image: data-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
