k8s/ai-service-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ai-service
spec:
  selector:
    app: ai-service
  ports:
    - port: 8001
      targetPort: 8001
