k8s/ai-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-service-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: ai.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 8000
